--- a/01-java-spring-laptopshop-starter/pom.xml
+++ b/01-java-spring-laptopshop-starter/pom.xml
@@ -28,9 +28,14 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency> 
- <groupId>org.springframework.boot</groupId> 
- <artifactId>spring-boot-starter-web</artifactId> 
-</dependency>
+			<groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-starter-web</artifactId> 
+		</dependency>
+		 <dependency> 
+			<groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-devtools</artifactId> 
+			<optional>true</optional> 
+    	</dependency>
 	</dependencies>
 
 	<build>
