video 53 how to get data by POST

--- a/01-java-spring-laptopshop-starter/src/main/resources/application.properties
+++ b/01-java-spring-laptopshop-starter/src/main/resources/application.properties
@@ -4,3 +4,14 @@ spring.datasource.username=root
 spring.datasource.password=0849522039Thuan
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
+
+
+#config spring security 
+spring.security.user.name=thuan
+spring.security.user.password=123456
+
+#config mvc views 
+# spring.mvc.view.prefix=/WEB-INF/view/ 
+# spring.mvc.view.suffix=.jsp
+
+
