--- a/01-java-spring-laptopshop-starter/pom.xml
+++ b/01-java-spring-laptopshop-starter/pom.xml
@@ -43,9 +43,12 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.33</version>
 		</dependency>
+
+
 
 
 		<dependency>
