--- a/01-java-spring-laptopshop-starter/src/main/resources/application.properties
+++ b/01-java-spring-laptopshop-starter/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/laptopshop
+spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/laptopshop
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/laptopshop
 spring.datasource.username=root
 spring.datasource.password=0849522039Thuan
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 
 
 #config spring security 
